--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,6 @@ jobs:
       VITE_FMP_API_KEY: ${{ secrets.VITE_FMP_API_KEY }}
       VITE_FMP_HOST: ${{ secrets.VITE_FMP_HOST }}
       VITE_OPEN_AI_API_KEY: ${{ secrets.VITE_OPEN_AI_API_KEY }}
-      VITE_ANTHROPIC_API_KEY: ${{ secrets.VITE_ANTHROPIC_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,6 +48,9 @@ jobs:
         run: npm run build
         env:
           VITE_APP_ENV: prod
+          VITE_FMP_API_KEY: ${{ secrets.VITE_FMP_API_KEY }}
+          VITE_FMP_HOST: ${{ secrets.VITE_FMP_HOST }}
+          VITE_OPEN_AI_API_KEY: ${{ secrets.VITE_OPEN_AI_API_KEY }}
       - name: Verificar dist
         run: ls -la ./dist
       - name: Configurar Pages
