--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.40.1",
     "antd": "^5.24.9",
+    "axios": "^1.9.0",
     "openai": "^4.97.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
