--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
       VITE_FMP_API_KEY: ${{ secrets.VITE_FMP_API_KEY }}
       VITE_FMP_HOST: ${{ secrets.VITE_FMP_HOST }}
       VITE_OPEN_AI_API_KEY: ${{ secrets.VITE_OPEN_AI_API_KEY }}
+      VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -51,6 +52,7 @@ jobs:
           VITE_FMP_API_KEY: ${{ secrets.VITE_FMP_API_KEY }}
           VITE_FMP_HOST: ${{ secrets.VITE_FMP_HOST }}
           VITE_OPEN_AI_API_KEY: ${{ secrets.VITE_OPEN_AI_API_KEY }}
+          VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }}
       - name: Verificar dist
         run: ls -la ./dist
       - name: Configurar Pages
